# jabrad

./: CMakeLists.txt  README.md  dbus-gen.c  dbus-gen.h  handler-dbus.c  handler-dbus.h  handler-jabra.c  handler-jabra.h  jabra-generated.c  jabra-generated.h  main.c  utils.c  utils.h
dbus/: com.github.borgoat.Jabra1.xml
